--- a/style.css
+++ b/style.css
@@ -45,3 +45,8 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-top: 80px;
 }
+
+#mainimg {
+  display: block; 
+  margin: 0 auto;
+}
